add recently played basic structure

--- a/index.html
+++ b/index.html
@@ -112,6 +112,95 @@
           </ul>
         </nav>
 
+        <!-- contenitore recently played -->
+        <section id="played">
+          <h2>Recently Played</h2>
+          <ul class="played_list">
+            <li class="played_element">
+              <div class="cover">
+                <img src="img/metal_lifting.jpg" alt="heavy-metal">
+
+              </div>
+
+              <div class="cover_text">
+                <h3>Heavy Metal</h3>
+                <p>Metallo pesante per te</p>
+
+              </div>
+
+            </li>
+
+            <li class="played_element">
+              <div class="cover">
+                <img src="img/metal_lifting.jpg" alt="heavy-metal">
+
+              </div>
+
+              <div class="cover_text">
+                <h3>Heavy Metal</h3>
+                <p>Metallo pesante per te</p>
+
+              </div>
+
+            </li>
+
+            <li class="played_element">
+              <div class="cover">
+                <img src="img/metal_lifting.jpg" alt="heavy-metal">
+
+              </div>
+
+              <div class="cover_text">
+                <h3>Heavy Metal</h3>
+                <p>Metallo pesante per te</p>
+
+              </div>
+
+            </li>
+
+            <li class="played_element">
+              <div class="cover">
+                <img src="img/metal_lifting.jpg" alt="heavy-metal">
+
+              </div>
+
+              <div class="cover_text">
+                <h3>Heavy Metal</h3>
+                <p>Metallo pesante per te</p>
+
+              </div>
+
+            </li>
+
+            <li class="played_element">
+              <div class="cover">
+                <img src="img/metal_lifting.jpg" alt="heavy-metal">
+
+              </div>
+
+              <div class="cover_text">
+                <h3>Heavy Metal</h3>
+                <p>Metallo pesante per te</p>
+
+              </div>
+
+            </li>
+
+            <li class="played_element">
+              <div class="cover">
+                <img src="img/metal_lifting.jpg" alt="heavy-metal">
+
+              </div>
+
+              <div class="cover_text">
+                <h3>Heavy Metal</h3>
+                <p>Metallo pesante per te</p>
+
+              </div>
+
+            </li>
+          </ul>
+        </section>
       </section>
 
     </main>
