add recently played, responsive not yet

--- a/index.html
+++ b/index.html
@@ -115,94 +115,83 @@
         <!-- contenitore recently played -->
         <section id="played">
           <h2>Recently Played</h2>
+          <!-- lista che conterrà i box degli elementi riprodotti recentemente -->
           <ul class="played_list">
+            <!-- ogni elemento della lista avrà a sua volta 2 elementi al suo interno, un box per le immagini e un box per le caratteristiche -->
+            <!-- primo elemento -->
             <li class="played_element">
+              <!-- box immagine -->
               <div class="cover">
                 <img src="img/metal_lifting.jpg" alt="heavy-metal">
-
               </div>
-
+              <!-- box caratteristiche -->
               <div class="cover_text">
                 <h3>Heavy Metal</h3>
                 <p>Metallo pesante per te</p>
-
               </div>
-
             </li>
 
+            <!-- secondo elemento -->
             <li class="played_element">
               <div class="cover">
-                <img src="img/metal_lifting.jpg" alt="heavy-metal">
-
+                <img src="img/stranger.jpeg" alt="stranger things">
               </div>
-
               <div class="cover_text">
-                <h3>Heavy Metal</h3>
-                <p>Metallo pesante per te</p>
-
+                <h3>Stranger Things, Vol.1 (A Netflix Original Series Soundtrack)</h3>
+                <p>Kyle Dixon &amp; Michael Stein</p>
               </div>
-
             </li>
 
+            <!-- terzo elemento -->
             <li class="played_element">
               <div class="cover">
-                <img src="img/metal_lifting.jpg" alt="heavy-metal">
-
+                <img src="img/aquietplace.jpeg" alt="a quiet place">
               </div>
-
               <div class="cover_text">
-                <h3>Heavy Metal</h3>
-                <p>Metallo pesante per te</p>
-
+                <h3>A quiet place</h3>
+                <p>Vai tranquillo</p>
               </div>
-
             </li>
 
+            <!-- quarto elemento -->
             <li class="played_element">
               <div class="cover">
-                <img src="img/metal_lifting.jpg" alt="heavy-metal">
-
+                <img src="img/split.jpeg" alt="splut">
               </div>
-
               <div class="cover_text">
-                <h3>Heavy Metal</h3>
-                <p>Metallo pesante per te</p>
-
+                <h3>Split</h3>
+                <p>Piacere, Franco! Ciao Franco!
+                No sono Luca</p>
               </div>
-
             </li>
 
+            <!-- quinto elemento -->
             <li class="played_element">
               <div class="cover">
-                <img src="img/metal_lifting.jpg" alt="heavy-metal">
-
+                <img src="img/cure.jpeg" alt="la cura della bellezza">
               </div>
-
               <div class="cover_text">
-                <h3>Heavy Metal</h3>
-                <p>Metallo pesante per te</p>
-
+                <h3>A Cure for Wellness</h3>
+                <p>Grazie ma mi piaccio così come sono</p>
               </div>
-
             </li>
 
+            <!-- sesto elemento -->
             <li class="played_element">
               <div class="cover">
-                <img src="img/metal_lifting.jpg" alt="heavy-metal">
-
+                <img src="img/sinister.jpeg" alt="sinister">
               </div>
-
               <div class="cover_text">
-                <h3>Heavy Metal</h3>
-                <p>Metallo pesante per te</p>
-
+                <h3>Sinister</h3>
+                <p>Si ma io scrivo con la destra</p>
               </div>
-
             </li>
           </ul>
+          <!-- fine lista sezione recently played -->
         </section>
+        <!-- / section played -->
       </section>
-
+      <!-- / main content -->
     </main>
   </div>
 
