add layover about recently played section

--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
               <!-- box immagine -->
               <div class="cover">
                 <img src="img/metal_lifting.jpg" alt="heavy-metal">
+                <div class="img_layover"><i class="far fa-play-circle"></i></div>
               </div>
               <!-- box caratteristiche -->
               <div class="cover_text">
@@ -135,6 +136,7 @@
             <li class="played_element">
               <div class="cover">
                 <img src="img/stranger.jpeg" alt="stranger things">
+                <div class="img_layover"><i class="far fa-play-circle"></i></div>
               </div>
               <div class="cover_text">
                 <h3>Stranger Things, Vol.1 (A Netflix Original Series Soundtrack)</h3>
@@ -146,6 +148,7 @@
             <li class="played_element">
               <div class="cover">
                 <img src="img/aquietplace.jpeg" alt="a quiet place">
+                <div class="img_layover"><i class="far fa-play-circle"></i></div>
               </div>
               <div class="cover_text">
                 <h3>A quiet place</h3>
@@ -156,7 +159,8 @@
             <!-- quarto elemento -->
             <li class="played_element">
               <div class="cover">
-                <img src="img/split.jpeg" alt="splut">
+                <img src="img/split.jpeg" alt="split">
+                <div class="img_layover"><i class="far fa-play-circle"></i></div>
               </div>
               <div class="cover_text">
                 <h3>Split</h3>
@@ -169,6 +173,7 @@
             <li class="played_element">
               <div class="cover">
                 <img src="img/cure.jpeg" alt="la cura della bellezza">
+                <div class="img_layover"><i class="far fa-play-circle"></i></div>
               </div>
               <div class="cover_text">
                 <h3>A Cure for Wellness</h3>
@@ -180,6 +185,7 @@
             <li class="played_element">
               <div class="cover">
                 <img src="img/sinister.jpeg" alt="sinister">
+                <div class="img_layover"><i class="far fa-play-circle"></i></div>
               </div>
               <div class="cover_text">
                 <h3>Sinister</h3>
