add create-for section responsive

--- a/index.html
+++ b/index.html
@@ -196,6 +196,40 @@
           <!-- fine lista sezione recently played -->
         </section>
         <!-- / section played -->
+
+        <!-- inizio sezione create -->
+        <section id="create">
+          <h2>Creato per Yuri Gianlorenzi</h2>
+          <p>Più ascolti, più accurati saranno i suggerimenti</p>
+          <ul class="played_list">
+            <!-- ogni elemento della lista avrà a sua volta 2 elementi al suo interno, un box per le immagini e un box per le caratteristiche, WARNING per la parte responsive e formattazione sono state usate le stesse classi della sezione precedente -->
+            <!-- primo elemento -->
+            <li class="played_element">
+              <!-- box immagine -->
+              <div class="cover">
+                <img src="img/radar.jpeg" alt="radar">
+                <div class="img_layover"><i class="far fa-play-circle"></i></div>
+              </div>
+              <!-- box caratteristiche -->
+              <div class="cover_text">
+                <h3>Heavy Metal</h3>
+              </div>
+            </li>
+
+            <!-- secondo elemento -->
+            <li class="played_element">
+              <div class="cover">
+                <img src="img/mixdaily.jpeg" alt="daily mix">
+                <div class="img_layover"><i class="far fa-play-circle"></i></div>
+              </div>
+              <div class="cover_text">
+                <h3>Daily Mix</h3>
+              </div>
+            </li>
+          </ul>
+          <!-- / lista -->
+        </section>
+        <!-- / sezione create -->
       </section>
       <!-- / main content -->
     </main>
