add popular artist section responsive

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
               </div>
               <!-- box caratteristiche -->
               <div class="cover_text">
-                <h3>Heavy Metal</h3>
+                <h3>Release Radar</h3>
               </div>
             </li>
 
@@ -230,6 +230,39 @@
           <!-- / lista -->
         </section>
         <!-- / sezione create -->
+
+        <!-- sezione popular -->
+        <section id="popular">
+          <h2>Artisti più popolari</h2>
+          <p>Più ascolti, più accurati saranno i suggerimenti</p>
+          <ul class="played_list">
+            <!-- ogni elemento della lista avrà a sua volta 2 elementi al suo interno, un box per le immagini e un box per le caratteristiche, WARNING per la parte responsive e formattazione sono state usate le stesse classi della sezione precedente -->
+            <!-- primo elemento -->
+            <li class="played_element">
+              <!-- box immagine -->
+              <div class="cover">
+                <img src="img/youg.jpeg" alt="Lana Del Rey">
+                <div class="img_layover"><i class="far fa-play-circle"></i></div>
+              </div>
+              <!-- box caratteristiche -->
+              <div class="cover_text">
+                <h3>Lana Del Rey</h3>
+              </div>
+            </li>
+
+            <!-- secondo elemento -->
+            <li class="played_element">
+              <div class="cover">
+                <img src="img/einaudi.jpeg" alt="Ludovico Einaudi">
+                <div class="img_layover"><i class="far fa-play-circle"></i></div>
+              </div>
+              <div class="cover_text">
+                <h3>Ludovico Einaudi</h3>
+              </div>
+            </li>
+          </ul>
+          <!-- / lista -->
+        </section>
       </section>
       <!-- / main content -->
     </main>
