add song section about footer

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
   <!-- Google font -->
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700" rel="stylesheet">
-  <title>YURIFY</title>
+  <title>Yurify</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -269,6 +269,31 @@
   </div>
 
   <footer>
+    <section id="player">
+      <!-- all'interno di quasto contenitore troveremo altri tre contenitori -->
+      <div class="song">
+        <div class="song_cover">
+          <img src="img/metal_lifting.jpg" alt="Song Cover">
+        </div>
+        <div class="song_name">
+          <a href="#"><h3>Heavy Metal</h3></a>
+          <a href="#"><p>Song Name</p></a>
+        </div>
+        <div class="song_save">
+          <a href="#"><i class="far fa-heart"></i></a>
+          <a href="#"><i class="far fa-folder"></i></a>
+        </div>
+      </div>
+
+      <div class="controller coral">
+
+      </div>
+
+      <div class="audio green">
+
+      </div>
+
+    </section>
 
   </footer>
 </body>
