add controller footer

--- a/index.html
+++ b/index.html
@@ -285,8 +285,30 @@
         </div>
       </div>
 
-      <div class="controller coral">
+      <div class="controller">
+        <div class="player_button">
+          <ul>
+            <li><a href="#"><i class="fas fa-random"></i></a></li>
+            <li><a href="#"><i class="fas fa-step-backward"></i></a></li>
+            <li class="bigger"><a href="#"><i class="far fa-play-circle"></i></a></li>
+            <li><a href="#"><i class="fas fa-step-forward"></i></a></li>
+            <li><a href="#"><i class="fas fa-redo-alt"></i></a></li>
+          </ul>
 
+        </div>
+
+        <div class="player_time">
+          <div class="time_go">0:30</div>
+
+          <div class="time_barr">
+            <div class="go_barr">
+              <div class="barr_point"></div>
+            </div>
+          </div>
+
+          <div class="time_tot">4:20</div>
+
+        </div>
       </div>
 
       <div class="audio green">
