add after about main content nav

--- a/index.html
+++ b/index.html
@@ -103,7 +103,8 @@
         <!-- nav del contenitore principale -->
         <nav class="main_content_nav">
           <ul class="main_content_nav_list">
-            <li><a href="#">in evidenza</a></li>
+            <!-- qui aggiungiamo la classe active per creare il tratto giallo sotto la scritta -->
+            <li><a href="#" class="active">in evidenza</a></li>
             <li><a href="#">podcast</a></li>
             <li><a href="#">classifiche</a></li>
             <li><a href="#">generi e mood</a></li>
