add some little thing about footer in xxxs devices

--- a/index.html
+++ b/index.html
@@ -319,8 +319,8 @@
       <!-- contenitore della lista utilizzata per creare la sezione audio del footer -->
       <div class="audio">
         <ul class="audio_list">
-          <li><a href="#"><i class="fas fa-list-ul"></i></a></li>
-          <li><a href="#"><i class="fas fa-desktop"></i></a></li>
+          <li class="audio_hidden"><a href="#"><i class="fas fa-list-ul"></i></a></li>
+          <li class="audio_hidden"><a href="#"><i class="fas fa-desktop"></i></a></li>
           <li class="audio_volume">
             <a href="#"><i class="fas fa-volume-up"></i></a>
             <div class="audio_barr">
